--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -780,7 +780,7 @@
    ],
    "source": [
     "# We load the curated gene-TF matrix for PBMC dataset\n",
-    "geneTF = pd.read_csv(\"../data_temp/D_pbmc.csv\", index_col=0)\n",
+    "geneTF = pd.read_csv(\"../data/D_pbmc.csv\", index_col=0)\n",
     "geneTF.shape"
    ]
   },
