--- a/hands-on_tutorial/session-3/scenicplus.ipynb
+++ b/hands-on_tutorial/session-3/scenicplus.ipynb
@@ -11,9 +11,9 @@
     "\n",
     "Before running this pipeline you should:\n",
     "\n",
-    "- Preprocess the scATAC-seq side of the data using [pycisTopic](https://github.com/aertslab/pycisTopic), [click here](...) for a tutorial.\n",
-    "- Preprocess the scRNA-seq side of the data using [Scanpy](https://github.com/scverse/scanpy), [click here](...) for a tutorial.\n",
-    "- Optionally, but highly recommended, generate a cisTarget database using the consensus peaks specific to your dataset, [click here](...) for a tutorial.\n",
+    "- Preprocess the scATAC-seq side of the data using [pycisTopic](https://github.com/aertslab/pycisTopic), [click here](https://pycistopic.readthedocs.io/en/latest/tutorials.html) for a tutorial.\n",
+    "- Preprocess the scRNA-seq side of the data using [Scanpy](https://github.com/scverse/scanpy), [click here](https://scanpy.readthedocs.io/en/stable/tutorials/index.html) for a tutorial.\n",
+    "- Optionally, but highly recommended, generate a cisTarget database using the consensus peaks specific to your dataset, [click here](https://scenicplus.readthedocs.io/en/latest/human_cerebellum_ctx_db.html) for a tutorial.\n",
     "\n",
     "In case you have human, mouse, or fly data you can also use one of the precomputed cisTarget databases. These can be found on our [resources website](https://resources.aertslab.org/cistarget/databases/)."
    ]
