--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This tutorial demo the usage of pySPaRTAN model in the following paper: Ma X, Somasundaram A, Qi Z, Hartman D, Singh H, Osmanbeyoglu HU.  From genome to phenome: Predicting multiple cancer phenotypes based on somatic genomic alterations via the genomic impact transformer. Nucleic Acids Research  2021.\n",
+    "This tutorial demo the usage of pySPaRTAN model in the following paper: Ma X, Somasundaram A, Qi Z, Hartman D, Singh H, Osmanbeyoglu HU.  SPaRTAN, a computational framework for linking cell-surface receptors to transcriptional regulators. Nucleic Acids Research  2021.\n",
     "\n",
     "Cell identity and function are dependent on the complex signaling and transcriptional programs. Advances in single cell technology has enabled the transcriptional state analysis coupled with cell surface receptor expression. This tutorial will demo the usage of our computational framework SPaRTAN (Single-cell Proteomic and RAN-based Transcription factor Activity Network). SPaRTAN uses CITE-seq (Cellular Indexing of Transcriptomics and Epitopes by sequencing) data to link surface protein expression to inferred transcription factor activity. It models the flow of information from cell-surface receptors to transcription factors (TFs), and then regulate the target genes.\n",
     "\n",
