--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -95,7 +95,15 @@
    },
    "outputs": [],
    "source": [
-    "! ls # on Mac, ! dir on Windows"
+    "! ls "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e479e47-a7bf-4a49-a37b-96a2f47e1269",
+   "metadata": {},
+   "source": [
+    "Use \"ls\" command on Mac computer; \"dir\" command on Windows computer"
    ]
   },
   {
