--- a/hands-on_tutorial/session-1/before_start.ipynb
+++ b/hands-on_tutorial/session-1/before_start.ipynb
@@ -14,6 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import scanpy as sc\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -72,6 +73,13 @@
    ],
    "source": [
     "sc.datasets.pbmc3k_processed()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use two ST datasets for demonstration of STAN."
    ]
   },
   {
@@ -158,7 +166,10 @@
       "Requirement already satisfied: tzdata>=2022.1 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from pandas!=2.0.1,>=1.1.1->anndata->decoupler) (2023.3)\n",
       "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from python-dateutil>=2.8.2->pandas!=2.0.1,>=1.1.1->anndata->decoupler) (1.15.0)\n",
       "\u001b[33mWARNING: Error parsing dependencies of pyzmq: Invalid version: 'cpython'\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.1.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3.8 install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -248,84 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: Ignored the following versions that require a different python version: 1.3.0 Requires-Python >=3.9; 1.3.1 Requires-Python >=3.9; 1.4.0 Requires-Python >=3.9; 1.4.1 Requires-Python >=3.9; 1.5.0 Requires-Python >=3.9\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[31mERROR: Could not find a version that satisfies the requirement squidpy==1.5.0 (from versions: 1.0.0, 1.0.1, 1.1.0, 1.1.1, 1.1.2, 1.2.0, 1.2.1, 1.2.2, 1.2.3)\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[31mERROR: No matching distribution found for squidpy==1.5.0\u001b[0m\u001b[31m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install squidpy==1.5.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.2.3'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import squidpy\n",
-    "squidpy.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: Ignored the following versions that require a different python version: 0.14.2 Requires-Python >=3.9\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[31mERROR: Could not find a version that satisfies the requirement statsmodels==0.14.2 (from versions: 0.4.0, 0.4.1, 0.4.3, 0.5.0rc1, 0.5.0, 0.6.0rc1, 0.6.0rc2, 0.6.0, 0.6.1, 0.8.0rc1, 0.8.0, 0.9.0rc1, 0.9.0, 0.10.0rc2, 0.10.0, 0.10.1, 0.10.2, 0.11.0rc1, 0.11.0rc2, 0.11.0, 0.11.1, 0.12.0rc0, 0.12.0, 0.12.1, 0.12.2, 0.13.0rc0, 0.13.0, 0.13.1, 0.13.2, 0.13.3, 0.13.4, 0.13.5, 0.14.0rc0, 0.14.0, 0.14.1)\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[31mERROR: No matching distribution found for statsmodels==0.14.2\u001b[0m\u001b[31m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install statsmodels==0.14.2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0.14.0'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import statsmodels\n",
-    "statsmodels.__version__"
+    "fig, ax = plt.subplots(figsize=(8, 5), dpi=300)\n",
+    "im = plt.imread('resources_stan/stan.png')\n",
+    "ax.imshow(im, interpolation='nearest')\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -337,23 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mkdir: resources_stan: File exists\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 2660k  100 2660k    0     0  38788      0  0:01:10  0:01:10 --:--:-- 3631329k    0     0  43258      0  0:01:02  0:00:17  0:00:45 25417   0  0:01:05  0:00:20  0:00:45 26574:21  0:00:45 270865 278250:00:51  0:00:20 33676:01:11  0:00:56  0:00:15 37506  0  0:01:11  0:01:02  0:00:09 42270\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 81467  100 81467    0     0   103k      0 --:--:-- --:--:-- --:--:--  104k\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!mkdir resources_stan\n",
     "!curl https://raw.githubusercontent.com/vitkl/cell2location_paper/1c645a0519f8f27ecef18468cf339d35d99f42e7/notebooks/selected_results/lymph_nodes_analysis/CoLocationModelNB4V2_34clusters_4039locations_10241genes_input_inferred_V4_batch1024_l2_0001_n_comb50_5_cps5_fpc3_alpha001/W_cell_density.csv \\\n",
@@ -364,138 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<details>\n",
-       "<summary>Click to view session information</summary>\n",
-       "<pre>\n",
-       "-----\n",
-       "anndata             0.9.2\n",
-       "decoupler           1.5.0\n",
-       "scanpy              1.9.4\n",
-       "session_info        1.0.0\n",
-       "squidpy             1.2.3\n",
-       "statsmodels         0.14.0\n",
-       "-----\n",
-       "</pre>\n",
-       "<details>\n",
-       "<summary>Click to view modules imported as dependencies</summary>\n",
-       "<pre>\n",
-       "PIL                 10.0.0\n",
-       "appnope             0.1.2\n",
-       "asciitree           NA\n",
-       "backcall            0.2.0\n",
-       "cffi                1.14.4\n",
-       "cloudpickle         2.2.1\n",
-       "cycler              0.10.0\n",
-       "cython_runtime      NA\n",
-       "cytoolz             0.12.3\n",
-       "dask                2023.5.0\n",
-       "dask_image          2023.03.0\n",
-       "dateutil            2.8.2\n",
-       "decorator           4.4.2\n",
-       "defusedxml          0.6.0\n",
-       "dill                0.3.8\n",
-       "docrep              0.3.2\n",
-       "entrypoints         0.3\n",
-       "fasteners           0.18\n",
-       "h5py                3.9.0\n",
-       "igraph              0.10.6\n",
-       "imageio             2.31.2\n",
-       "importlib_metadata  NA\n",
-       "importlib_resources NA\n",
-       "ipykernel           5.4.2\n",
-       "ipython_genutils    0.2.0\n",
-       "jedi                0.18.0\n",
-       "jinja2              2.11.2\n",
-       "joblib              1.3.2\n",
-       "kiwisolver          1.4.5\n",
-       "lazy_loader         NA\n",
-       "leidenalg           0.10.1\n",
-       "llvmlite            0.35.0\n",
-       "lz4                 4.3.3\n",
-       "markupsafe          1.1.1\n",
-       "matplotlib          3.7.2\n",
-       "matplotlib_scalebar 0.8.1\n",
-       "mpl_toolkits        NA\n",
-       "msgpack             1.0.8\n",
-       "natsort             8.4.0\n",
-       "networkx            3.1\n",
-       "numba               0.52.0\n",
-       "numcodecs           0.11.0\n",
-       "numexpr             2.8.6\n",
-       "numpy               1.22.4\n",
-       "packaging           20.8\n",
-       "pandas              2.0.3\n",
-       "parso               0.8.1\n",
-       "patsy               0.5.3\n",
-       "pexpect             4.8.0\n",
-       "pickle5             NA\n",
-       "pickleshare         0.7.5\n",
-       "pkg_resources       NA\n",
-       "prompt_toolkit      3.0.8\n",
-       "psutil              6.0.0\n",
-       "ptyprocess          0.7.0\n",
-       "pyarrow             16.0.0\n",
-       "pycparser           2.20\n",
-       "pygments            2.7.3\n",
-       "pyparsing           2.4.7\n",
-       "pytz                2023.3\n",
-       "pywt                1.4.1\n",
-       "scipy               1.10.1\n",
-       "seaborn             0.12.2\n",
-       "six                 1.15.0\n",
-       "skimage             0.21.0\n",
-       "sklearn             1.3.2\n",
-       "storemagic          NA\n",
-       "tblib               3.0.0\n",
-       "texttable           1.6.7\n",
-       "threadpoolctl       3.2.0\n",
-       "tifffile            2023.7.10\n",
-       "tlz                 0.12.3\n",
-       "toolz               0.12.0\n",
-       "torch               2.2.1\n",
-       "torchgen            NA\n",
-       "tornado             6.1\n",
-       "tqdm                4.66.1\n",
-       "traitlets           5.0.5\n",
-       "typing_extensions   NA\n",
-       "validators          0.21.2\n",
-       "wcwidth             0.2.5\n",
-       "xarray              2023.1.0\n",
-       "yaml                6.0.1\n",
-       "zarr                2.16.1\n",
-       "zipp                NA\n",
-       "zmq                 20.0.0\n",
-       "</pre>\n",
-       "</details> <!-- seems like this ends pre, so might as well be explicit -->\n",
-       "<pre>\n",
-       "-----\n",
-       "IPython             7.19.0\n",
-       "jupyter_client      6.1.7\n",
-       "jupyter_core        4.7.0\n",
-       "notebook            6.1.6\n",
-       "-----\n",
-       "Python 3.8.5 (v3.8.5:580fbb018f, Jul 20 2020, 12:11:27) [Clang 6.0 (clang-600.0.57)]\n",
-       "macOS-10.16-x86_64-i386-64bit\n",
-       "-----\n",
-       "Session information updated at 2024-07-01 15:06\n",
-       "</pre>\n",
-       "</details>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import session_info\n",
     "session_info.show()"
