--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "Cell identity and function depend on complex signaling and transcriptional programs. Advances in single-cell technology have enabled the analysis of transcriptional states coupled with cell surface receptor expression. This tutorial will demonstrate the usage of our computational framework pySPaRTAN, a Python implementation of the SPaRTAN (Single-cell Proteomic and RNA-based Transcription factor Activity Network) framework. SPaRTAN models the flow of information from cell-surface receptors to transcription factors (TFs), then regulate target genes. pySPaRTAN utilizes CITE-seq data, including cell surface protein and gene expression, to infer TF activity."
+    "Cell identity and function depend on complex signaling and transcriptional programs. Advances in single-cell technology have enabled the analysis of transcriptional states coupled with cell surface receptor expression. This tutorial will demonstrate the usage of our computational framework pySPaRTAN, a Python implementation of the SPaRTAN (Single-cell Proteomic and RNA-based Transcription factor Activity Network) framework. SPaRTAN models the flow of information from cell-surface receptors to transcription factors (TFs), then regulate target genes. pySPaRTAN utilizes CITE-seq data, which includes cell surface protein and gene expression, to infer TF activity."
    ]
   },
   {
@@ -711,6 +711,7 @@
     "pySPaRTAN is constructed as a bilinear regression model. The inputs are D: a gene-TF matrix, P: a cell x protein matrix, and Y: a gene x cell matrix. D is a prior dataset that can be downloaded online. P and Y are normalized protein and gene expression data derived from our processed CITE-seq data. The model learns the interaction matrix W between cell surface proteins and transcription factor activity that best predicts the target gene expression.\n",
     "\n",
     "<img src=\"pySPaRTAN_diagram_2.png\" alt=\"Diagram\" width=\"600\" />\n",
+    "\n",
     "<img src=\"equation_1.png\" alt=\"Diagram\" width=\"120\" />"
    ]
   },
