--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -1933,7 +1933,7 @@
    "id": "29a9ca47-1302-400d-8298-add1b0a2a7be",
    "metadata": {},
    "source": [
-    "We filter out the TF and protein with lower absolute correlation values "
+    "We select the TFs and proteins with high absolute correlation values "
    ]
   },
   {
