--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -906,7 +906,7 @@
    "id": "f22d4de9-1a40-43fe-a0ca-5bd6d5c9692f",
    "metadata": {},
    "source": [
-    "Before training the model, D, P and Y are all normalized with a unit norm within cells"
+    "Before training the model, we recommend normalizing D, P, and Y using l2 normalization. P and Y are normalized within cells."
    ]
   },
   {
@@ -936,7 +936,7 @@
    "id": "992780dd-bd63-4abf-a286-6595fa7e2ca8",
    "metadata": {},
    "source": [
-    "We train the model using 80% of all cells in the dataset. The remaining 20% will be reserved for testing to evaluate the model’s performance."
+    "In order to accurately evaluate the model’s performance, we train the model using 80% of cells. The remaining 20% will be reserved for testing ."
    ]
   },
   {
