--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -978,7 +978,7 @@
    "id": "85771aff-0226-4675-a858-ceb9bfb785c0",
    "metadata": {},
    "source": [
-    "pySPaRTAN is a regularized bilinear model that incorporates three hyperparameters: lambda, rsL2, and spectrum. Lambda and rsL2 control the trade-off between L1 and L2 regularization. Spectrum controls the truncation of the P matrix by singular value decomposition. For example, setting spectrum=0.7 specifies the number of singular vectors capturing 70% of the full spectrum. For clear meaning of those hyperparameters, please refer to our paper https://academic.oup.com/nar/article/49/17/9633/6368058?login=true\n",
+    "pySPaRTAN is a regularized bilinear model that incorporates three hyperparameters: lambda, rsL2, and spectrum. Lambda and rsL2 control the trade-off between L1 and L2 regularization. Spectrum controls the truncation of the P matrix by singular value decomposition. For example, setting spectrum=0.7 specifies the number of singular vectors capturing 70% of the full spectrum. For specific meaning of those hyperparameters, please refer to our paper https://academic.oup.com/nar/article/49/17/9633/6368058?login=true\n",
     "\n",
     "To tune these hyperparamters, We employ cross-validation and grid search to determine the optimal values of lambda (ranging from 1e-5 to 10) and rsL2 (ranging from 0 to 1). The spectrum parameter requires less tuning; hence, we fix it at 0.7.\n",
     "\n",
