--- a/hands-on_tutorial/session-1/before_start.ipynb
+++ b/hands-on_tutorial/session-1/before_start.ipynb
@@ -187,7 +187,7 @@
     "\n",
     "**IMPORTANT:** To install and use pySCENIC, we recommend to create a new conda envorinment as instructed.\n",
     "\n",
-    "[2] Van de Sande, Bram, et al. \"A scalable SCENIC workflow for single-cell gene regulatory network analysis.\" _Nature protocols_ 15.7 (2020): 2247-2276.\n"
+    "[2] Van de Sande, Bram, et al. \"A scalable SCENIC workflow for single-cell gene regulatory network analysis.\" _Nature Protocols_ 15.7 (2020): 2247-2276.\n"
    ]
   },
   {
