--- a/hands-on_tutorial/session-1/before_start.ipynb
+++ b/hands-on_tutorial/session-1/before_start.ipynb
@@ -185,7 +185,7 @@
     "## pySCENIC (scRNA-seq based)\n",
     "[pySCENIC](https://www.nature.com/articles/s41596-020-0336-2) [2] is a package containing different statistical methods to extract biological activities from single-cell RNA-seq data within a unified framework, including gene regulatory network inference and transcription factor activity inference. We follow [the instruction](https://pyscenic.readthedocs.io/en/latest/installation.html) to install pySCENIC. pySCENIC depends on packages e.g. arboreto and ctxcore. \n",
     "\n",
-    "**IMPORTANT:** To install and use pySCENIC, we recommend to create a new conda envorinment as instructed.\n",
+    "**IMPORTANT:** To install and use pySCENIC, we recommend creating a new conda environment as instructed.\n",
     "\n",
     "[2] Van de Sande, Bram, et al. \"A scalable SCENIC workflow for single-cell gene regulatory network analysis.\" _Nature Protocols_ 15.7 (2020): 2247-2276.\n"
    ]
