--- a/hands-on_tutorial/session-1/pyscenic.ipynb
+++ b/hands-on_tutorial/session-1/pyscenic.ipynb
@@ -4,12 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# pySCENIC\n",
-    "[pySCENIC](https://www.nature.com/articles/s41596-020-0336-2) is a package containing different statistical methods to extract biological activities from single-cell RNA-seq data within a unified framework, including gene regulatory network inference and transcription factor activity inference.\n",
+    "# pySCENIC (scRNA-seq based)\n",
+    "[pySCENIC](https://www.nature.com/articles/s41596-020-0336-2) [1] is a package containing different statistical methods to extract biological activities from scRNA-seq data within a unified framework, including gene regulatory network inference and transcription factor activity inference. We follow [the instruction](https://pyscenic.readthedocs.io/en/latest/installation.html) to install pySCENIC. pySCENIC depends on packages e.g. arboreto and ctxcore. In this notebook (integrated from [this example](https://pyscenic.readthedocs.io/en/latest/tutorial.html) and [this example](https://github.com/aertslab/pySCENIC/blob/master/notebooks/pySCENIC%20-%20Full%20pipeline.ipynb)) we show how to use [pySCENIC](https://pyscenic.readthedocs.io/en/latest/) for TF activity inference with only the gene expression matrix. \n",
     "\n",
-    "In [this notebook](https://pyscenic.readthedocs.io/en/latest/tutorial.html) we show how to use [pySCENIC](https://pyscenic.readthedocs.io/en/latest/) for TF activity inference with only the gene expression matrix. Follow [the instruction](https://pyscenic.readthedocs.io/en/latest/installation.html) to install pySCENIC. \n",
+    "[1] Van de Sande, Bram, et al. \"A scalable SCENIC workflow for single-cell gene regulatory network analysis.\" _Nature Protocols_ 15.7 (2020): 2247-2276.\n",
     "\n",
-    "pySCENIC depends on packages e.g. arboreto and ctxcore. **To install and use pySCENIC, we recommend to create a new conda envorinment as instructed.**"
+    "**IMPORTANT** \n",
+    "- To install and use pySCENIC, we recommend creating a new conda environment as instructed.\n",
+    "- Before running pySCENIC, download the [resources and databases](https://resources.aertslab.org/cistarget/) first.\n",
+    "![alt text](https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41596-020-0336-2/MediaObjects/41596_2020_336_Fig1_HTML.png?as=webp)\n",
+    "\n",
+    "(Image is linked from [here](https://www.nature.com/articles/s41596-020-0336-2/figures/1).) "
    ]
   },
   {
@@ -168,8 +173,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading the scRNA-seq data\n",
-    "For this tutorial, we will analyze the a dataset of Peripheral Blood Mononuclear Cells (PBMC) freely available from [10X Genomics](https://support.10xgenomics.com/single-cell-gene-expression/datasets/1.1.0/pbmc3k). The raw 3k PBMC data can be downloaded using `scanpy`."
+    "## Preliminary work\n",
+    "\n",
+    "### Loading the scRNA-seq data\n",
+    "For this tutorial, we will analyze a scRNA-seq data consists in 3k peripheral blood mononuclear cells (PBMCs) from a Healthy Donor which is freely available from [10x Genomics](https://support.10xgenomics.com/single-cell-gene-expression/datasets/1.1.0/pbmc3k). The following command downloads 5.9 MB of data upon the first call and stores it in `data/pbmc3k_raw.h5ad`. Basic preprocessing workflow can be found [here](https://scanpy.readthedocs.io/en/stable/tutorials/basics/clustering-2017.html)."
    ]
   },
   {
@@ -462,7 +469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Phase I: Inference of co-expression modules\n",
+    "### Loading the list of transcription factors (for Phase I)\n",
     "Load the list of human TFs, which can be downloaded from [here](https://github.com/aertslab/pySCENIC/blob/master/resources/hs_hgnc_tfs.txt)."
    ]
   },
@@ -479,7 +486,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run GRNboost from arboreto to infer co-expression modules."
+    "### Loading the ranking databases (for Phase II)\n",
+    "Load the ranking databases, which can be downloaded from [here](https://resources.aertslab.org/cistarget/databases/homo_sapiens/hg38/refseq_r80/mc_v10_clust/gene_based/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_fnames = glob.glob('resources_pyscenic/*rankings.feather')\n",
+    "def name(fname):\n",
+    "    return os.path.splitext(os.path.basename(fname))[0]\n",
+    "dbs = [RankingDatabase(fname=fname, name=name(fname)) for fname in db_fnames]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Phase I: Inference of co-expression modules\n",
+    "In the initial phase of the pySCENIC pipeline the single cell expression profiles are used to infer co-expression modules. \n",
+    "### Inference of co-expression modules\n",
+    "Given a predefined list of TFs, regulatory interactions between these factors and putative target genes are inferred via regression-based network inference from the expression or count matrix."
    ]
   },
   {
@@ -519,6 +549,13 @@
    ],
    "source": [
     "adjacencies = grnboost2(ex_matrix, tf_names=tf_names, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output is a list of adjacencies connecting a TF with a target gene. A weight or importance is associated with these connections to distinguish strong from weak regulatory interactions."
    ]
   },
   {
@@ -627,7 +664,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Derive potential regulomes from these co-expression modules."
+    "### Derivation of potential regulomes\n",
+    "Regulons are derived from adjacencies based on three methods:\n",
+    "- Based on the top N targets for each factor, with a default of 50 targets.\n",
+    "- Based on the top N regulators for a target; the default settings select sets of 5, 10, and 50 regulators.\n",
+    "- Based on a percentile score; the default is to select sets based on the 75th or 90th percentile of a factor’s targets."
    ]
   },
   {
@@ -657,6 +698,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These modules are defined by the name of the regulator (TF), the list of target genes, the method of generation and the mode of transcriptional control (activation or repression). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -681,25 +729,6 @@
    "metadata": {},
    "source": [
     "## Phase II: Prune modules for targets with cis regulatory footprints\n",
-    "Load the ranking databases, which can be downloaded from [here](https://resources.aertslab.org/cistarget/databases/homo_sapiens/hg38/refseq_r80/mc_v10_clust/gene_based/)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db_fnames = glob.glob('resources_pyscenic/*rankings.feather')\n",
-    "def name(fname):\n",
-    "    return os.path.splitext(os.path.basename(fname))[0]\n",
-    "dbs = [RankingDatabase(fname=fname, name=name(fname)) for fname in db_fnames]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Calculate a list of enriched motifs and the corresponding target genes for all modules. The motif-to-TF annotation file can be download from [here](https://resources.aertslab.org/cistarget/motif2tf/)."
    ]
   },
@@ -711,6 +740,13 @@
    "source": [
     "motif_annotation_file = 'resources_pyscenic/motifs-v10nr_clust-nr.hgnc-m0.001-o0.0.tbl'\n",
     "df = prune2df(dbs, modules, motif_annotation_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output is a table including scores from the ranking and recovery procedure (the area under the curve AUC and the normalized enrichment score NES), annotations, and an abbreviated list of the target genes with their network importance scores."
    ]
   },
   {
@@ -898,27 +934,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**IMPORTANT** Save and reload the motifs to proceed succesfully."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('outputs_pyscenic/motifs.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Save and reload the motifs to proceed succesfully."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df.to_csv('outputs_pyscenic/motifs.csv')\n",
     "df_motifs = load_motifs('outputs_pyscenic/motifs.csv')"
    ]
   },
@@ -1107,6 +1135,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This dataframe can then be converted to regulons."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1122,6 +1157,13 @@
    ],
    "source": [
     "regulons = df2regulons(df_motifs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sets of predicted direct target genes across all modules sharing the same regulator are combined into a single resulting regulon. Only the genes that make up the leading edge of a motif annotated for the factor are retained in the final predicted regulon."
    ]
   },
   {
@@ -1148,7 +1190,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Phase III: Cellular regulon enrichment matrix"
+    "## Phase III: Cellular regulon enrichment matrix\n",
+    "To quantify the activity of these predicted regulons in the individual cells, `aucell` calculates the recovery of the predicted targetome of a factor on the expression abundance-based ranked list of genes in a cell. Enrichment of a regulon is measures as AUC of the recovery curve of the genes that define this regulon."
    ]
   },
   {
