--- a/hands-on_tutorial/session-1/before_start.ipynb
+++ b/hands-on_tutorial/session-1/before_start.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Preliminary work\n",
-    "The session showcases how to infer activities of transcription factor from single-cell RNA-sequencing (scRNA-seq) data and spatial transcriptomics (ST) data using three methods:\n",
+    "The session showcases how to infer activities of transcription factors from single-cell RNA-sequencing (scRNA-seq) data and spatial transcriptomics (ST) data using three methods:\n",
     "- decoupleR (scRNA-seq based)\n",
     "- pySCENIC (scRNA-seq based)\n",
     "- STAN (ST-based)\n",
@@ -19,7 +19,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import scanpy as sc\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -91,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will download a Visium spatial transcriptomics dataset of a human lymphnode freely available from [10X Genomics](https://support.10xgenomics.com/spatial-gene-expression/datasets/1.0.0/V1_Human_Lymph_Node). This command downloads 47.4 MB of data upon the first call and stores it in `data/V1_Human_Lymph_Node/`, including the high-resolution tissue image."
+    "We will download a Visium spatial transcriptomics dataset of a human lymph node freely available from [10X Genomics](https://support.10xgenomics.com/spatial-gene-expression/datasets/1.0.0/V1_Human_Lymph_Node). This command downloads 47.4 MB of dataset upon the first call and stores it in `data/V1_Human_Lymph_Node/`, including the high-resolution tissue image."
    ]
   },
   {
@@ -116,37 +115,6 @@
    ],
    "source": [
     "sc.datasets.visium_sge(sample_id=\"V1_Human_Lymph_Node\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will also download a Visium spatial transcriptomics dataset of a human glioblastoma freely available from [10X Genomics](https://www.10xgenomics.com/datasets/human-glioblastoma-whole-transcriptome-analysis-1-standard-1-2-0). This command downloads 38.9 MB of data upon the first call and stores it in `data/Parent_Visium_Human_Glioblastoma/`, including the high-resolution tissue image."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AnnData object with n_obs × n_vars = 3468 × 36601\n",
-       "    obs: 'in_tissue', 'array_row', 'array_col'\n",
-       "    var: 'gene_ids', 'feature_types', 'genome'\n",
-       "    uns: 'spatial'\n",
-       "    obsm: 'spatial'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sc.datasets.visium_sge(sample_id=\"Parent_Visium_Human_Glioblastoma\")"
    ]
   },
   {
@@ -245,7 +213,7 @@
    "metadata": {},
    "source": [
     "## STAN (ST-based)\n",
-    "[STAN](https://www.biorxiv.org/content/10.1101/2024.06.26.600782v1) [3] is a computational framework for inferring **spatially informed** transcription factor activity across cellular contexts. Specifically, STAN is a linear mixed-effects computational method that predicts spot-specific, spatially informed TF activities by integrating curated TF-target gene priors, mRNA expression, spatial coordinates, and morphological features from corresponding imaging data. We install additional packages to support STAN.\n",
+    "[STAN](https://www.biorxiv.org/content/10.1101/2024.06.26.600782v1) [3] is a computational framework for inferring **spatially informed** transcription factor activity across cellular contexts. Specifically, STAN is a linear mixed-effects computational method that predicts spot-specific, spatially informed TF activities by integrating curated TF-target gene priors, mRNA expression, spatial coordinates, and morphological features from corresponding imaging data. \n",
     "\n",
     "[3] Zhang, Linan, et al. \"STAN, a computational framework for inferring spatially informed transcription factor activity across cellular contexts.\" _bioRxiv_ (2024): 2024-06."
    ]
@@ -283,7 +251,6 @@
        "<pre>\n",
        "-----\n",
        "anndata             0.9.2\n",
-       "matplotlib          3.7.2\n",
        "scanpy              1.9.4\n",
        "session_info        1.0.0\n",
        "-----\n",
@@ -321,6 +288,7 @@
        "llvmlite            0.35.0\n",
        "lz4                 4.3.3\n",
        "markupsafe          1.1.1\n",
+       "matplotlib          3.7.2\n",
        "mpl_toolkits        NA\n",
        "msgpack             1.0.8\n",
        "natsort             8.4.0\n",
@@ -374,7 +342,7 @@
        "Python 3.8.5 (v3.8.5:580fbb018f, Jul 20 2020, 12:11:27) [Clang 6.0 (clang-600.0.57)]\n",
        "macOS-10.16-x86_64-i386-64bit\n",
        "-----\n",
-       "Session information updated at 2024-07-09 00:26\n",
+       "Session information updated at 2024-07-09 12:38\n",
        "</pre>\n",
        "</details>"
       ],
