--- a/hands-on_tutorial/session-1/decoupler.ipynb
+++ b/hands-on_tutorial/session-1/decoupler.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# decoupleR (scRNA-seq based)\n",
-    "[decoupler](https://doi.org/10.1093/bioadv/vbac016) [1] is a package containing different statistical methods to extract biological activities from omics data within a unified framework, including pathway activity inference and transcription factor activity inference. We follow [the instruction](https://decoupler-py.readthedocs.io/en/latest/installation.html) to install decoupler. In [this notebook](https://decoupler-py.readthedocs.io/en/latest/notebooks/dorothea.html) we show how to use [decoupler](https://decoupler-py.readthedocs.io/en/latest/) for [TF activity inference](https://decoupler-py.readthedocs.io/en/latest/notebooks/dorothea.html) with only the gene expression matrix. \n",
+    "[decoupleR](https://doi.org/10.1093/bioadv/vbac016) [1] is a package containing different statistical methods to extract biological activities from omics data within a unified framework, including pathway activity inference and transcription factor activity inference. We follow [the instruction](https://decoupler-py.readthedocs.io/en/latest/installation.html) to install decoupler. In [this notebook](https://decoupler-py.readthedocs.io/en/latest/notebooks/dorothea.html) we show how to use [decoupleR](https://decoupler-py.readthedocs.io/en/latest/) for [TF activity inference](https://decoupler-py.readthedocs.io/en/latest/notebooks/dorothea.html) with only the gene expression matrix. \n",
     "\n",
     "[1] Badia-i-Mompel, Pau, et al. \"decoupleR: ensemble of computational methods to infer biological activities from omics data.\" _Bioinformatics Advances_ 2.1 (2022): vbac016."
    ]
@@ -336,7 +336,7 @@
    "metadata": {},
    "source": [
     "## Activity inference with univariate linear model (ULM)\n",
-    "For each cell in `adata` and each TF in `net`, it fits a linear model that predicts the observed gene expression based solely on the TF-Gene interaction weights. Once fitted, the obtained $t$-value of the slope is the score. If it is positive, we interpret that the TF is active and if it is negative we interpret that it is inactive. \n",
+    "For each cell in `adata` and each TF in `net`, decoupleR fits a linear model that predicts the observed gene expression based solely on the TF-target gene interaction weights. Once fitted, the obtained $t$-value of the slope is the score. If it is positive, we interpret that the TF is active and if it is negative we interpret that it is inactive. \n",
     "\n",
     "![alt text](https://decoupler-py.readthedocs.io/en/latest/_images/ulm.png)\n",
     "\n",
@@ -849,7 +849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PAX5 is a master regulator of B cell development. First we correlate the inferred TFa of PAX5 and the mRNA expression of marker genes of B cells. Then we cluster the cells based on inferred TF activity and mRNA expression."
+    "PAX5 is a master regulator of B cell development. First, we correlate the inferred activity of PAX5 and the mRNA expression of marker genes of B cells."
    ]
   },
   {
@@ -877,7 +877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The inferred TF activity of PAX5 is more informative than the gene expression of _PAX5_, since _PAX5_ is expressed only in a few cells."
+    "The inferred TF activity of PAX5 is more informative than the  expression of _PAX5_, since _PAX5_ is expressed only in a few cells."
    ]
   },
   {
@@ -925,7 +925,7 @@
    "metadata": {},
    "source": [
     "## Exploration\n",
-    "Now we identify the top TFs by cell type. We can do it by identifying marker TFs statistically."
+    "Now we identify the top TFs by cell type. This can be done by identifying marker TFs statistically."
    ]
   },
   {
