--- a/hands-on_tutorial/session-1/pyscenic.ipynb
+++ b/hands-on_tutorial/session-1/pyscenic.ipynb
@@ -934,10 +934,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**IMPORTANT** Save and reload the motifs to proceed succesfully."
+    "**IMPORTANT** Save and reload the motifs to proceed successfully."
    ]
   },
   {
