--- a/hands-on_tutorial/session-1/pyscenic.ipynb
+++ b/hands-on_tutorial/session-1/pyscenic.ipynb
@@ -1192,7 +1192,7 @@
    "metadata": {},
    "source": [
     "## Phase III: Cellular regulon enrichment matrix\n",
-    "To quantify the activity of these predicted regulons in the individual cells, `aucell` calculates the recovery of the predicted targetome of a factor on the expression abundance-based ranked list of genes in a cell. Enrichment of a regulon is measures as AUC of the recovery curve of the genes that define this regulon."
+    "To quantify the activity of these predicted regulons in the individual cells, `aucell` calculates the recovery of the predicted targetome of a factor on the expression abundance-based ranked list of genes in a cell. Enrichment of a regulon is measured as AUC of the recovery curve of the genes that define this regulon."
    ]
   },
   {
