--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -169,6 +169,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c295435a-37f5-4dea-9b8a-a9c753fa65c9",
+   "metadata": {},
+   "source": [
+    "Here is the roadmap for the tutorial:\n",
+    "1. pySPaRTAN data preparation\n",
+    "    * Data pre-processing\n",
+    "        * Data loading\n",
+    "        * Quality control\n",
+    "        * Normalization\n",
+    "    * Cell type annotation\n",
+    "        * Feature selection\n",
+    "        * Dimensionality reduction\n",
+    "        * Clustering\n",
+    "        * Annotation\n",
+    "2. PySPaRTAN execution\n",
+    "    * Reviewing pySPaRTAN model\n",
+    "    * Generating pySPaRTAN input\n",
+    "    * Running pySPaRTAN model\n",
+    "3. Result analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b238518-50e7-45e4-9b59-3bdb5bac095a",
    "metadata": {},
    "source": [
@@ -559,7 +582,7 @@
    "id": "cf46d1fc-6406-45bd-aa28-a66828611e02",
    "metadata": {},
    "source": [
-    "Next cluster cells using  Leiden algorithm which is considered as an improved version of the Louvain algorithm"
+    "Then cluster cells using  Leiden algorithm which is considered as an improved version of the Louvain algorithm"
    ]
   },
   {
@@ -577,7 +600,7 @@
    "id": "8c3e616d-ca9f-435d-b0ee-2b5834eb2201",
    "metadata": {},
    "source": [
-    "Then We embed neighborhood graph into two-dimensional space and visualize it using UMAP"
+    "Next We embed neighborhood graph into two-dimensional space and visualize it using UMAP"
    ]
   },
   {
@@ -2010,7 +2033,7 @@
     "plt.rcParams['figure.figsize'] = [14, 7]\n",
     "fig, ax = plt.subplots(1,2)\n",
     "prot = \"CD127\"\n",
-    "line_plot(tf_protein, prot, 8, ax[0])\n",
+    "line_plot(tf_protein, prot, 8, ax[0]) \n",
     "prot = \"TIGIT\"\n",
     "line_plot(tf_protein, prot, 8, ax[1])\n",
     "\n",
