--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "Cell identity and function depend on complex signaling and transcriptional programs. Advances in single-cell technology have enabled the analysis of transcriptional states coupled with cell surface receptor expression. This tutorial will demonstrate the usage of our computational framework pySPaRTAN, a Python implementation of the SPaRTAN (Single-cell Proteomic and RNA-based Transcription factor Activity Network) framework. SPaRTAN models the flow of information from cell-surface receptors to transcription factors (TFs), then regulate target genes. pySPaRTAN utilizes CITE-seq data, which includes cell surface protein and gene expression, to infer TF activity.\n",
     "\n",
-    "SPaRTAN is availabe at https://academic.oup.com/nar/article/49/17/9633/6368058?login=false "
+    "SPaRTAN is availabe at https://academic.oup.com/nar/article/49/17/9633/6368058"
    ]
   },
   {
@@ -992,7 +992,7 @@
    "id": "8fb6dfe4-3d7e-48af-9d3b-3f1fd1644e0c",
    "metadata": {},
    "source": [
-    "pySPaRTAN is a regularized bilinear model that incorporates three hyperparameters: lambda, rsL2, and spectrum. Lambda and rsL2 control the trade-off between L1 and L2 regularization. Spectrum controls the truncation of the P matrix by singular value decomposition. For example, setting spectrum=0.7 specifies the number of singular vectors capturing 70% of the full spectrum. For clear meaning of those hyperparameters, please refer to our paper https://academic.oup.com/nar/article/49/17/9633/6368058?login=true\n",
+    "pySPaRTAN is a regularized bilinear model that incorporates three hyperparameters: lambda, rsL2, and spectrum. Lambda and rsL2 control the trade-off between L1 and L2 regularization. Spectrum controls the truncation of the P matrix by singular value decomposition. For example, setting spectrum=0.7 specifies the number of singular vectors capturing 70% of the full spectrum. For clear meaning of those hyperparameters, please refer to our paper https://academic.oup.com/nar/article/49/17/9633/6368058\n",
     "\n",
     "To tune these hyperparamters, We employ cross-validation and grid search to determine the optimal values of lambda (ranging from 1e-5 to 10) and rsL2 (ranging from 0 to 1). The spectrum parameter requires less tuning; hence, we fix it at 0.7.\n",
     "\n",
