--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -722,7 +722,8 @@
    "id": "045fb735-6945-4dae-9def-29766a8585a0",
    "metadata": {},
    "source": [
-    "## Reviewing pySPaRTAN model\n",
+    "## pySPaRTAN execution\n",
+    "### Reviewing pySPaRTAN model\n",
     "\n",
     "pySPaRTAN is constructed as a bilinear regression model. The inputs are D: a gene-TF matrix, P: a cell x protein matrix, and Y: a gene x cell matrix. D is a prior dataset that can be downloaded online. P and Y are normalized protein and gene expression data derived from our processed CITE-seq data. The model learns the interaction matrix W between cell surface proteins and transcription factor activity that best predicts the target gene expression.\n",
     "\n",
@@ -780,7 +781,7 @@
    "id": "82de65dc-fef0-4385-b01d-3ea17aed43c7",
    "metadata": {},
    "source": [
-    "## Generating pySPaRTAN input data"
+    "### Generating pySPaRTAN input data"
    ]
   },
   {
@@ -877,7 +878,7 @@
    "id": "7d925937-76ac-45f1-b703-99271337a33a",
    "metadata": {},
    "source": [
-    "## Training cell-type specific pySPaRTAN model\n",
+    "### Training cell-type specific pySPaRTAN model\n",
     "After preparing the input for pySPaRTAN, we are ready to run the model. We will use the CD8 T cell to demonstrate the procedure."
    ]
   },
