--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -74,7 +74,7 @@
    },
    "outputs": [],
    "source": [
-    "# ! python  setup.py build_ext --inplace"
+    "! python  setup.py build_ext --inplace"
    ]
   },
   {
