--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -969,15 +969,8 @@
     "ct = \"CD8\"\n",
     "D = geneTF.copy()\n",
     "P = ADTs[ct].copy()\n",
-    "Y = RNAs[ct].copy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f2ac8ec9-3546-45f7-a54f-8bf8ba12add1",
-   "metadata": {},
-   "source": [
-    "D, P, Y are Pandas dataframes"
+    "Y = RNAs[ct].copy()\n",
+    "# D, P, Y are Pandas dataframes"
    ]
   },
   {
